--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
   			        <div class="single-recent-blog-post">
                   <div class="thumb">
   			            {% if post.image_url %}
-                      <img class="img-fluid" src="{{post.image_url}}" alt="">
+                      <img class="img-fluid" src="{{post.image_url}}" alt="Post image">
   				          {% else %}
   				            <img class="img-fluid" src="{% static 'img/banner/blog.png' %}">
   				          {% endif %}
